[gd_scene load_steps=19 format=3 uid="uid://eajmuj2d4n0"]

[ext_resource type="Script" uid="uid://gla0cja4mfrw" path="res://scripts/enemy/enemy.gd" id="1_lhhhu"]
[ext_resource type="Script" uid="uid://cx0xxqn8au6ks" path="res://scripts/common/health.gd" id="2_qbp5v"]
[ext_resource type="Script" uid="uid://c4yuajoxxo5r4" path="res://scripts/enemy/enemy_hearing.gd" id="3_gwhv1"]
[ext_resource type="Script" uid="uid://b1iyvhk6s6soj" path="res://scripts/enemy/enemy_sight.gd" id="4_4efyp"]
[ext_resource type="Shader" uid="uid://541fc1k45g4m" path="res://scenes/prefabs/character.gdshader" id="5_o335u"]
[ext_resource type="Texture2D" uid="uid://bv3tpfcb1s034" path="res://sources/bat-Sheet.png" id="6_lhhhu"]
[ext_resource type="Texture2D" uid="uid://04yrain5fnii" path="res://sources/bat_normalmap.png" id="7_qbp5v"]
[ext_resource type="Script" uid="uid://b3ey84j6drg0v" path="res://scripts/enemy/enemy_sprite.gd" id="9_13ngv"]
[ext_resource type="Script" uid="uid://dd0ocu2dk0341" path="res://scripts/enemy/enemy_ai.gd" id="10_so1ny"]
[ext_resource type="Script" uid="uid://h2ankc57xp0k" path="res://scripts/enemy/enemy_movement.gd" id="11_ivcsi"]
[ext_resource type="Script" uid="uid://q786hxut4s3f" path="res://scripts/enemy/enemy_gun_holder.gd" id="12_mosl7"]
[ext_resource type="Script" uid="uid://dum25iy3i8s0w" path="res://scripts/common/melee.gd" id="14_w13pg"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5hfr3"]
height = 6.0
radius = 12.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cf8o5"]
radius = 0.7
height = 1.8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_alqqg"]
render_priority = 0
shader = ExtResource("5_o335u")
shader_parameter/albedo_texture = ExtResource("6_lhhhu")
shader_parameter/normal_map = ExtResource("7_qbp5v")
shader_parameter/flashing = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pql7b"]
transparency = 1
depth_draw_mode = 2
no_depth_test = true
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 1, 0.5019608)
albedo_texture = ExtResource("6_lhhhu")
texture_filter = 0
billboard_mode = 1
stencil_mode = 3
stencil_flags = 1
stencil_compare = 2

[sub_resource type="SphereMesh" id="SphereMesh_alqqg"]
radial_segments = 6
rings = 3

[sub_resource type="BoxShape3D" id="BoxShape3D_7j55l"]

[node name="Enemy" type="CharacterBody3D" node_paths=PackedStringArray("movement", "ai", "gun_holder", "navigation")]
collision_layer = 8
script = ExtResource("1_lhhhu")
movement = NodePath("Movement")
ai = NodePath("AI")
gun_holder = NodePath("gun_holder")
navigation = NodePath("NavigationAgent3D")

[node name="health" type="Node3D" parent="."]
script = ExtResource("2_qbp5v")
health = 5

[node name="hearing" type="Node3D" parent="."]
script = ExtResource("3_gwhv1")

[node name="sight" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.32182, 0)
collision_layer = 0
collision_mask = 4
script = ExtResource("4_4efyp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="sight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_5hfr3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_cf8o5")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.031883, 1.3703692, 0)
material_override = SubResource("ShaderMaterial_alqqg")
material_overlay = SubResource("StandardMaterial3D_pql7b")
pixel_size = 0.12
billboard = 1
shaded = true
texture_filter = 0
texture = ExtResource("6_lhhhu")
hframes = 4
script = ExtResource("9_13ngv")
normal_map = ExtResource("7_qbp5v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Sprite3D"]
cast_shadow = 3
gi_mode = 2
mesh = SubResource("SphereMesh_alqqg")

[node name="AI" type="Node" parent="." node_paths=PackedStringArray("gun_holder")]
script = ExtResource("10_so1ny")
gun_holder = NodePath("../gun_holder")

[node name="Movement" type="Node" parent="."]
script = ExtResource("11_ivcsi")
movement_speed = 3.5

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="gun_holder" type="Node3D" parent="." node_paths=PackedStringArray("melee")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
script = ExtResource("12_mosl7")
melee = NodePath("knife")
reload_time = 3.0

[node name="knife" type="Area3D" parent="gun_holder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
collision_layer = 0
collision_mask = 6
script = ExtResource("14_w13pg")
damage = 1
cooldown = 1.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="gun_holder/knife"]
shape = SubResource("BoxShape3D_7j55l")
debug_color = Color(0.9812632, 0.13779119, 1.92523e-07, 0.41960785)

[connection signal="on_damaged" from="health" to="Sprite3D" method="on_damage"]
[connection signal="on_sound_heared" from="hearing" to="AI" method="on_sound_heared"]
[connection signal="fire_sighted" from="sight" to="AI" method="on_fire_sighted"]
[connection signal="target_sighted" from="sight" to="AI" method="on_target_sighted"]
